--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
             </div>
           </a>
         </div>
+        <div class="project-container schism">
+          <a href="https://github.com/jonasongg/schism/" target="_blank" class="box">
+            <div class="content">
+              <img src="./schism.svg" alt="">
+            </div>
+          </a>
+          <span class="project-title" data-text="Schism">Schism</span>
+          <span class="project-subtitle">— React</span>
+        </div>
       </div>
     </section>
     <section id="work">
@@ -191,8 +200,9 @@
       </a>
     </footer>
   </div>
-  <script src="script.js"></script>
   <script src="https://kit.fontawesome.com/f936bcdaf4.js" crossorigin="anonymous"></script>
+  <!-- <script src="https://unpkg.com/powerglitch@latest/dist/powerglitch.min.js"></script> -->
+  <script src="script.js"></script>
 </body>
 
 </html>
