css changes for reposense

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
           <span class="project-subtitle">— Ruby on Rails + React</span>
         </div>
         <div class="project-container reposense">
-          <div class="project-titles-right">
-            <span class="project-subtitle project-subtitle__right">(contributor) Java + Vue — </span>
+          <div class="project-title-right">
+            <span class="project-subtitle project-subtitle__right">Java + Vue</span>
             <span class="project-title" data-text="RepoSense">RepoSense</span>
           </div>
           <a href="https://reposense.org/" target="_blank" class="box">
