fix mobile project, add accessibility image

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section id="projects">
       <h2>PROJECTS</span></h2>
       <div class="grid">
-        <div class="project-container" id="this">
+        <div class="project-container this">
           <a href="#hello" class="box">
             <div class="content">
               <img src="./this.png" alt="">
@@ -46,7 +46,7 @@
           <span class="project-title" data-text="this website">this website</span>
           <span class="project-subtitle">— HTML + CSS + JS</span>
         </div>
-        <div class="project-container" id="cvwo">
+        <div class="project-container cvwo">
           <a href="https://www.comp.nus.edu.sg/~vwo/projects/2023-lbsa.html" target="_blank" class="box">
             <div class="content">
               <img src="./review_monthly_statements_react.png" alt="" onmouseenter="startGif()"
@@ -56,7 +56,7 @@
           <span class="project-title" data-text="CVWO ⨯ LBSA">CVWO ⨯ LBSA</span>
           <span class="project-subtitle">— Ruby on Rails + React</span>
         </div>
-        <div class="project-container" id="canrecycle">
+        <div class="project-container canrecycle">
           <a href="https://github.com/jonasongg/CanRecycle" target="_blank" class="box">
             <div class="content">
               <img src="./canrecycle.png" alt="">
@@ -65,7 +65,7 @@
           <span class="project-title" data-text="CanRecycle?">CanRecycle?</span>
           <span class="project-subtitle">— Android Studio + Java</span>
         </div>
-        <div class="project-container" id="forum">
+        <div class="project-container forum">
           <a href="https://foruum.herokuapp.com/" target="_blank" class="box">
             <div class="content">
               <img src="./forum.png" alt="">
@@ -74,7 +74,7 @@
           <span class="project-title" data-text="forum">forum</span>
           <span class="project-subtitle">— Ruby on Rails + React</span>
         </div>
-        <div class="project-container" id="reposense">
+        <div class="project-container reposense">
           <div class="project-title-right">
             <span class="project-subtitle project-subtitle__right">Java + Vue</span>
             <span class="project-title" data-text="RepoSense">RepoSense</span>
@@ -85,7 +85,7 @@
             </div>
           </a>
         </div>
-        <div class="project-container" id="schism">
+        <div class="project-container schism">
           <a href="https://github.com/jonasongg/schism/" target="_blank" class="box">
             <div class="content glitch">
               <img src="./schism.svg" alt="">
